# manga-image-translator-gui

./: .gitignore  CHANGELOG.md  README.md  build-appimage.sh
.github/workflows/: build-appimage.yml  build-flatpak.yml  build-linux.yml  build-windows.yml
flatpak/: com.manga-translator.gui.yaml  com.mangatranslator.gui.yaml  io.github.manga_translator_gtk.yaml
locale/: manga-translator.pot
locale/de/LC_MESSAGES/: manga-translator.mo  manga-translator.po
locale/en/LC_MESSAGES/: manga-translator.mo  manga-translator.po
locale/es/LC_MESSAGES/: manga-translator.mo  manga-translator.po
locale/fr/LC_MESSAGES/: manga-translator.mo  manga-translator.po
locale/it/LC_MESSAGES/: manga-translator.mo  manga-translator.po
locale/ja/LC_MESSAGES/: manga-translator.mo  manga-translator.po
locale/ko/LC_MESSAGES/: manga-translator.mo  manga-translator.po
locale/pt_BR/LC_MESSAGES/: manga-translator.mo  manga-translator.po
locale/zh_CN/LC_MESSAGES/: manga-translator.mo  manga-translator.po
logs_69153912826/: 0_build.txt
manga-translator-gtk/: Cargo.toml
manga-translator-gtk/backend/: server.py
manga-translator-gtk/resources/: style.css
manga-translator-gtk/src/: config.rs  i18n.rs  ipc_bridge.rs  lib.rs  main.rs
manga-translator-gtk/src/ui/: css.rs  dialogs.rs  file_browser.rs  main_window.rs  mod.rs  preview.rs  settings_panel.rs
manga-translator-gtk/tests/: bridge_test.rs
packaging/: AppRun  manga-translator-gtk.desktop
packaging/metainfo/: io.github.manga_translator_gtk.appdata.xml
windows/: AppxManifest.xml
