[package]
name = "manga-translator-gtk"
version = "0.2.0"
edition = "2024"
description = "Manga Image Translator — GTK4/libadwaita GUI (Rust)"
license = "MIT"

[dependencies]
gtk = { package = "gtk4", version = "0.11", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_5"] }

glib = "0.22"
gio = "0.22"
pango = "0.22"
cairo-rs = { version = "0.22", features = ["png"] }
gdk-pixbuf = "0.22"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-channel = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
dirs = "6"
alphanumeric-sort = "1"
base64 = "0.22"
